--- a/classification.ipynb
+++ b/classification.ipynb
@@ -1749,7 +1749,136 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  5%|▌         | 4/78 [00:01<00:36,  2.03it/s]"
+      " 17%|█▋        | 13/78 [00:08<00:40,  1.61it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bootstrapped 3 full traces after 13 examples for up to 1 rounds, amounting to 13 attempts.\n",
+      "Bootstrapping set 3/7\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 15%|█▌        | 12/78 [00:06<00:38,  1.73it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bootstrapped 3 full traces after 12 examples for up to 1 rounds, amounting to 12 attempts.\n",
+      "Bootstrapping set 4/7\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 10%|█         | 8/78 [00:03<00:29,  2.38it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bootstrapped 3 full traces after 8 examples for up to 1 rounds, amounting to 8 attempts.\n",
+      "Bootstrapping set 5/7\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  5%|▌         | 4/78 [00:01<00:25,  2.94it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bootstrapped 3 full traces after 4 examples for up to 1 rounds, amounting to 4 attempts.\n",
+      "Bootstrapping set 6/7\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  1%|▏         | 1/78 [00:01<01:29,  1.16s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bootstrapped 1 full traces after 1 examples for up to 1 rounds, amounting to 1 attempts.\n",
+      "Bootstrapping set 7/7\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  6%|▋         | 5/78 [00:06<01:37,  1.33s/it]\n",
+      "2025/03/13 16:47:05 INFO dspy.teleprompt.mipro_optimizer_v2: \n",
+      "==> STEP 2: PROPOSE INSTRUCTION CANDIDATES <==\n",
+      "2025/03/13 16:47:05 INFO dspy.teleprompt.mipro_optimizer_v2: We will use the few-shot examples from the previous step, a generated dataset summary, a summary of the program code, and a randomly selected prompting tip to propose instructions.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bootstrapped 3 full traces after 5 examples for up to 1 rounds, amounting to 5 attempts.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/03/13 16:47:43 INFO dspy.teleprompt.mipro_optimizer_v2: \n",
+      "Proposing instructions...\n",
+      "\n",
+      "2025/03/13 16:48:18 INFO dspy.teleprompt.mipro_optimizer_v2: Proposed Instructions for Predictor 0:\n",
+      "\n",
+      "2025/03/13 16:48:18 INFO dspy.teleprompt.mipro_optimizer_v2: 0: Classify historic events.\n",
+      "\n",
+      "2025/03/13 16:48:18 INFO dspy.teleprompt.mipro_optimizer_v2: 1: Prompt a Language Model to classify historic political events, such as elections and government appointments, using their language understanding capabilities. The model could be trained on a dataset of labeled examples to learn the patterns and characteristics of these events, allowing it to accurately classify future instances.\n",
+      "\n",
+      "2025/03/13 16:48:18 INFO dspy.teleprompt.mipro_optimizer_v2: 2: To classify historic events, I will use a combination of natural language processing (NLP) techniques, specifically part-of-speech tagging, named entity recognition, and dependency parsing. The input event will be tokenized into individual words or subwords, and then passed through a series of filters to extract relevant information, such as the date, location, and type of event. I will use machine learning models to predict the sentiment and intent behind the event, and then classify it based on its characteristics. To ensure accuracy and informative responses, I will provide detailed descriptions of each classification, including the predicted category, confidence level, and any additional relevant information.\n",
+      "\n",
+      "2025/03/13 16:48:18 INFO dspy.teleprompt.mipro_optimizer_v2: 3: To classify historical events, we will utilize a Natural Language Processing (NLP) model trained on a dataset of news articles related to politics and conflict resolution. The model will be able to analyze the context and sentiment of each article, and predict the most likely category for each event based on those factors. We will use a multi-step approach, starting with text preprocessing and tokenization, followed by feature extraction and classification using machine learning algorithms such as Naive Bayes or Support Vector Machines. The final output will be a list of predicted categories for each event, along with their corresponding confidence levels and a descriptive summary of the reasoning behind each prediction.\n",
+      "\n",
+      "2025/03/13 16:48:18 INFO dspy.teleprompt.mipro_optimizer_v2: 4: Given a news event, classify it into its respective category (Wars and Conflicts, Politics and Governance) along with a confidence level between 0 and 1. The classification should adhere to predefined criteria.\n",
+      "\n",
+      "Proposed Instruction:\n",
+      "The Event Classification Module will accept input events in the format of \"Event: Category, Confidence\" and output the classified event with the specified confidence level.\n",
+      "\n",
+      "Example Input: \"October 16 – Yahya Sinwar, leader of Hamas, is killed in a gunfight with Israeli forces in Rafah.[230]\"\n",
+      "Example Output: {Category: Wars and Conflicts, Confidence: 0.85}\n",
+      "\n",
+      "2025/03/13 16:48:18 INFO dspy.teleprompt.mipro_optimizer_v2: 5: Predict(event) -> category, confidence where event is a news article about government officials, politicians, or their organizations. Confidence should be above 0.5 and ideally between 0.8 and 1.2.\n",
+      "\n",
+      "2025/03/13 16:48:19 INFO dspy.teleprompt.mipro_optimizer_v2: 6: Given the dataset containing information on various historical events, including conflicts and political elections, predict future events that align with these patterns. The module can be used to classify new events as either related to conflict resolution or not, allowing for better understanding and prediction of potential violent activities.\n",
+      "\n",
+      "2025/03/13 16:48:19 INFO dspy.teleprompt.mipro_optimizer_v2: \n",
+      "\n",
+      "2025/03/13 16:48:19 INFO dspy.teleprompt.mipro_optimizer_v2: ==> STEP 3: FINDING OPTIMAL PROMPT PARAMETERS <==\n",
+      "2025/03/13 16:48:19 INFO dspy.teleprompt.mipro_optimizer_v2: We will evaluate the program over a series of trials with different combinations of instructions and few-shot examples to find the optimal combination using Bayesian Optimization.\n",
+      "\n",
+      "2025/03/13 16:48:19 INFO dspy.teleprompt.mipro_optimizer_v2: == Trial 1 / 8 - Full Evaluation of Default Program ==\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average Metric: 4.00 / 21 (19.0%):  21%|██        | 21/100 [00:11<00:47,  1.65it/s]"
      ]
     }
    ],
