--- a/classification.ipynb
+++ b/classification.ipynb
@@ -1878,7 +1878,50 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average Metric: 4.00 / 21 (19.0%):  21%|██        | 21/100 [00:11<00:47,  1.65it/s]"
+      "Average Metric: 26.00 / 100 (26.0%): 100%|██████████| 100/100 [00:53<00:00,  1.88it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/03/13 16:49:12 INFO dspy.evaluate.evaluate: Average Metric: 26 / 100 (26.0%)\n",
+      "2025/03/13 16:49:12 INFO dspy.teleprompt.mipro_optimizer_v2: Default program score: 26.0\n",
+      "\n",
+      "/Users/aidand/dev/hello-dspy/env/lib/python3.10/site-packages/optuna/_experimental.py:31: ExperimentalWarning: Argument ``multivariate`` is an experimental feature. The interface can change in the future.\n",
+      "  warnings.warn(\n",
+      "2025/03/13 16:49:12 INFO dspy.teleprompt.mipro_optimizer_v2: == Trial 2 / 8 - Minibatch ==\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Average Metric: 18.00 / 25 (72.0%): 100%|██████████| 25/25 [00:17<00:00,  1.40it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/03/13 16:49:30 INFO dspy.evaluate.evaluate: Average Metric: 18 / 25 (72.0%)\n",
+      "2025/03/13 16:49:30 INFO dspy.teleprompt.mipro_optimizer_v2: Score: 72.0 on minibatch of size 25 with parameters ['Predictor 0: Instruction 1'].\n",
+      "2025/03/13 16:49:30 INFO dspy.teleprompt.mipro_optimizer_v2: Minibatch scores so far: [72.0]\n",
+      "2025/03/13 16:49:30 INFO dspy.teleprompt.mipro_optimizer_v2: Full eval scores so far: [26.0]\n",
+      "2025/03/13 16:49:30 INFO dspy.teleprompt.mipro_optimizer_v2: Best full score so far: 26.0\n",
+      "2025/03/13 16:49:30 INFO dspy.teleprompt.mipro_optimizer_v2: ========================================\n",
+      "\n",
+      "\n",
+      "2025/03/13 16:49:30 INFO dspy.teleprompt.mipro_optimizer_v2: == Trial 3 / 8 - Minibatch ==\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Average Metric: 9.00 / 14 (64.3%):  56%|█████▌    | 14/25 [00:30<00:16,  1.53s/it]"
      ]
     }
    ],
