--- a/classification.ipynb
+++ b/classification.ipynb
@@ -1716,7 +1716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1921,7 +1921,144 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Average Metric: 9.00 / 14 (64.3%):  56%|█████▌    | 14/25 [00:30<00:16,  1.53s/it]"
+      "Average Metric: 14.00 / 25 (56.0%): 100%|██████████| 25/25 [00:50<00:00,  2.02s/it]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/03/13 16:50:20 INFO dspy.evaluate.evaluate: Average Metric: 14 / 25 (56.0%)\n",
+      "2025/03/13 16:50:20 INFO dspy.teleprompt.mipro_optimizer_v2: Score: 56.0 on minibatch of size 25 with parameters ['Predictor 0: Instruction 5'].\n",
+      "2025/03/13 16:50:20 INFO dspy.teleprompt.mipro_optimizer_v2: Minibatch scores so far: [72.0, 56.0]\n",
+      "2025/03/13 16:50:20 INFO dspy.teleprompt.mipro_optimizer_v2: Full eval scores so far: [26.0]\n",
+      "2025/03/13 16:50:20 INFO dspy.teleprompt.mipro_optimizer_v2: Best full score so far: 26.0\n",
+      "2025/03/13 16:50:20 INFO dspy.teleprompt.mipro_optimizer_v2: ========================================\n",
+      "\n",
+      "\n",
+      "2025/03/13 16:50:20 INFO dspy.teleprompt.mipro_optimizer_v2: == Trial 4 / 8 - Minibatch ==\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Average Metric: 18.00 / 25 (72.0%): 100%|██████████| 25/25 [00:56<00:00,  2.26s/it]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/03/13 16:51:17 INFO dspy.evaluate.evaluate: Average Metric: 18 / 25 (72.0%)\n",
+      "2025/03/13 16:51:17 INFO dspy.teleprompt.mipro_optimizer_v2: Score: 72.0 on minibatch of size 25 with parameters ['Predictor 0: Instruction 2'].\n",
+      "2025/03/13 16:51:17 INFO dspy.teleprompt.mipro_optimizer_v2: Minibatch scores so far: [72.0, 56.0, 72.0]\n",
+      "2025/03/13 16:51:17 INFO dspy.teleprompt.mipro_optimizer_v2: Full eval scores so far: [26.0]\n",
+      "2025/03/13 16:51:17 INFO dspy.teleprompt.mipro_optimizer_v2: Best full score so far: 26.0\n",
+      "2025/03/13 16:51:17 INFO dspy.teleprompt.mipro_optimizer_v2: ========================================\n",
+      "\n",
+      "\n",
+      "2025/03/13 16:51:17 INFO dspy.teleprompt.mipro_optimizer_v2: == Trial 5 / 8 - Minibatch ==\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Average Metric: 17.00 / 25 (68.0%): 100%|██████████| 25/25 [00:31<00:00,  1.26s/it]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/03/13 16:51:48 INFO dspy.evaluate.evaluate: Average Metric: 17 / 25 (68.0%)\n",
+      "2025/03/13 16:51:48 INFO dspy.teleprompt.mipro_optimizer_v2: Score: 68.0 on minibatch of size 25 with parameters ['Predictor 0: Instruction 5'].\n",
+      "2025/03/13 16:51:48 INFO dspy.teleprompt.mipro_optimizer_v2: Minibatch scores so far: [72.0, 56.0, 72.0, 68.0]\n",
+      "2025/03/13 16:51:48 INFO dspy.teleprompt.mipro_optimizer_v2: Full eval scores so far: [26.0]\n",
+      "2025/03/13 16:51:48 INFO dspy.teleprompt.mipro_optimizer_v2: Best full score so far: 26.0\n",
+      "2025/03/13 16:51:48 INFO dspy.teleprompt.mipro_optimizer_v2: ========================================\n",
+      "\n",
+      "\n",
+      "2025/03/13 16:51:48 INFO dspy.teleprompt.mipro_optimizer_v2: == Trial 6 / 8 - Minibatch ==\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Average Metric: 18.00 / 25 (72.0%): 100%|██████████| 25/25 [00:39<00:00,  1.59s/it]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/03/13 16:52:28 INFO dspy.evaluate.evaluate: Average Metric: 18 / 25 (72.0%)\n",
+      "2025/03/13 16:52:28 INFO dspy.teleprompt.mipro_optimizer_v2: Score: 72.0 on minibatch of size 25 with parameters ['Predictor 0: Instruction 4'].\n",
+      "2025/03/13 16:52:28 INFO dspy.teleprompt.mipro_optimizer_v2: Minibatch scores so far: [72.0, 56.0, 72.0, 68.0, 72.0]\n",
+      "2025/03/13 16:52:28 INFO dspy.teleprompt.mipro_optimizer_v2: Full eval scores so far: [26.0]\n",
+      "2025/03/13 16:52:28 INFO dspy.teleprompt.mipro_optimizer_v2: Best full score so far: 26.0\n",
+      "2025/03/13 16:52:28 INFO dspy.teleprompt.mipro_optimizer_v2: ========================================\n",
+      "\n",
+      "\n",
+      "2025/03/13 16:52:28 INFO dspy.teleprompt.mipro_optimizer_v2: == Trial 7 / 8 - Minibatch ==\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Average Metric: 14.00 / 25 (56.0%): 100%|██████████| 25/25 [00:09<00:00,  2.72it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/03/13 16:52:37 INFO dspy.evaluate.evaluate: Average Metric: 14 / 25 (56.0%)\n",
+      "2025/03/13 16:52:37 INFO dspy.teleprompt.mipro_optimizer_v2: Score: 56.0 on minibatch of size 25 with parameters ['Predictor 0: Instruction 1'].\n",
+      "2025/03/13 16:52:37 INFO dspy.teleprompt.mipro_optimizer_v2: Minibatch scores so far: [72.0, 56.0, 72.0, 68.0, 72.0, 56.0]\n",
+      "2025/03/13 16:52:37 INFO dspy.teleprompt.mipro_optimizer_v2: Full eval scores so far: [26.0]\n",
+      "2025/03/13 16:52:37 INFO dspy.teleprompt.mipro_optimizer_v2: Best full score so far: 26.0\n",
+      "2025/03/13 16:52:37 INFO dspy.teleprompt.mipro_optimizer_v2: ========================================\n",
+      "\n",
+      "\n",
+      "2025/03/13 16:52:37 INFO dspy.teleprompt.mipro_optimizer_v2: ===== Trial 8 / 8 - Full Evaluation =====\n",
+      "2025/03/13 16:52:37 INFO dspy.teleprompt.mipro_optimizer_v2: Doing full eval on next top averaging program (Avg Score: 72.0) from minibatch trials...\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Average Metric: 68.00 / 100 (68.0%): 100%|██████████| 100/100 [02:28<00:00,  1.49s/it]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/03/13 16:55:06 INFO dspy.evaluate.evaluate: Average Metric: 68 / 100 (68.0%)\n",
+      "2025/03/13 16:55:06 INFO dspy.teleprompt.mipro_optimizer_v2: \u001b[92mNew best full eval score!\u001b[0m Score: 68.0\n",
+      "2025/03/13 16:55:06 INFO dspy.teleprompt.mipro_optimizer_v2: Full eval scores so far: [26.0, 68.0]\n",
+      "2025/03/13 16:55:06 INFO dspy.teleprompt.mipro_optimizer_v2: Best full score so far: 68.0\n",
+      "2025/03/13 16:55:06 INFO dspy.teleprompt.mipro_optimizer_v2: =======================\n",
+      "2025/03/13 16:55:06 INFO dspy.teleprompt.mipro_optimizer_v2: \n",
+      "\n",
+      "2025/03/13 16:55:06 INFO dspy.teleprompt.mipro_optimizer_v2: Returning best identified program with score 68.0!\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
@@ -1940,8 +2077,27 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average Metric: 7.00 / 10 (70.0%):  10%|█         | 10/98 [00:35<05:53,  4.01s/it]"
+     ]
+    }
+   ],
+   "source": [
+    "evaluator(optimized_classify, metric=validate_category)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "lm.inspect_history(n=1)"
+   ]
   }
  ],
  "metadata": {
