--- a/classification.ipynb
+++ b/classification.ipynb
@@ -2075,15 +2075,205 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average Metric: 7.00 / 10 (70.0%):  10%|█         | 10/98 [00:35<05:53,  4.01s/it]"
+      "Average Metric: 70.00 / 98 (71.4%): 100%|██████████| 98/98 [06:42<00:00,  4.11s/it]"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/03/13 17:06:32 INFO dspy.evaluate.evaluate: Average Metric: 70 / 98 (71.4%)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>event</th>\n",
+       "      <th>example_category</th>\n",
+       "      <th>pred_category</th>\n",
+       "      <th>confidence</th>\n",
+       "      <th>validate_category</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2024 Comorian presidential election: Amid an opposition boycott, i...</td>\n",
+       "      <td>Politics and Governance</td>\n",
+       "      <td>Politics and Governance</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>✔️ [True]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>November 27 – After forming a coalition Government with the right-...</td>\n",
+       "      <td>Politics and Governance</td>\n",
+       "      <td>Politics and Governance</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>✔️ [True]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>December 12 – At the COP28 climate summit in Dubai, a consensus is...</td>\n",
+       "      <td>Politics and Governance</td>\n",
+       "      <td>Economic Events</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>June 6–9 – The 2024 European Parliament election is held. The EPP,...</td>\n",
+       "      <td>Politics and Governance</td>\n",
+       "      <td>Politics and Governance</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>✔️ [True]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>November 29 – 2024 Irish general election: Centre-right party Fian...</td>\n",
+       "      <td>Politics and Governance</td>\n",
+       "      <td>Politics and Governance</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>✔️ [True]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                                   event  \\\n",
+       "0  2024 Comorian presidential election: Amid an opposition boycott, i...   \n",
+       "1  November 27 – After forming a coalition Government with the right-...   \n",
+       "2  December 12 – At the COP28 climate summit in Dubai, a consensus is...   \n",
+       "3  June 6–9 – The 2024 European Parliament election is held. The EPP,...   \n",
+       "4  November 29 – 2024 Irish general election: Centre-right party Fian...   \n",
+       "\n",
+       "          example_category            pred_category  confidence  \\\n",
+       "0  Politics and Governance  Politics and Governance         0.8   \n",
+       "1  Politics and Governance  Politics and Governance         0.8   \n",
+       "2  Politics and Governance          Economic Events         0.8   \n",
+       "3  Politics and Governance  Politics and Governance         0.8   \n",
+       "4  Politics and Governance  Politics and Governance         0.8   \n",
+       "\n",
+       "  validate_category  \n",
+       "0         ✔️ [True]  \n",
+       "1         ✔️ [True]  \n",
+       "2                    \n",
+       "3         ✔️ [True]  \n",
+       "4         ✔️ [True]  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "                <div style='\n",
+       "                    text-align: center;\n",
+       "                    font-size: 16px;\n",
+       "                    font-weight: bold;\n",
+       "                    color: #555;\n",
+       "                    margin: 10px 0;'>\n",
+       "                    ... 93 more rows not displayed ...\n",
+       "                </div>\n",
+       "                "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "71.43"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<div>\n",
+       "  <style scoped>\n",
+       "  button {\n",
+       "    border: none;\n",
+       "    border-radius: 4px;\n",
+       "    background-color: rgb(34, 114, 180);\n",
+       "    font-family: -apple-system, \"system-ui\", \"Segoe UI\", Roboto, \"Helvetica Neue\", Arial;\n",
+       "    font-size: 13px;\n",
+       "    color: white;\n",
+       "    margin-top: 8px;\n",
+       "    margin-bottom: 8px;\n",
+       "    padding: 8px 16px;\n",
+       "    cursor: pointer;\n",
+       "  }\n",
+       "  button:hover {\n",
+       "    background-color: rgb(66, 153, 224);\n",
+       "  }\n",
+       "  </style>\n",
+       "  <button\n",
+       "    onclick=\"\n",
+       "        const display = this.nextElementSibling.style.display;\n",
+       "        const isCollapsed = display === 'none';\n",
+       "        this.nextElementSibling.style.display = isCollapsed ? null : 'none';\n",
+       "\n",
+       "        const verb = isCollapsed ? 'Collapse' : 'Expand';\n",
+       "        this.innerText = `${verb} MLflow Trace`;\n",
+       "    \"\n",
+       "  >Collapse MLflow Trace</button>\n",
+       "  <iframe\n",
+       "    id=\"trace-renderer\"\n",
+       "    style=\"width: 100%; height: 500px; border: none; resize: vertical;\"\n",
+       "    src=\"http://localhost:5000/static-files/lib/notebook-trace-renderer/index.html?trace_id=1c2f06aff78a453bb2f5661c88cdd589&amp;experiment_id=374362034103955121&amp;trace_id=6cbda2edc44844689931cdaeafe31287&amp;experiment_id=374362034103955121&amp;trace_id=dd5e5fa84d9a46978fbfd9f1a4c23dc8&amp;experiment_id=374362034103955121&amp;trace_id=1cced7301baa422889e03947efd92b75&amp;experiment_id=374362034103955121&amp;trace_id=1327677978cf4b00979d269541e370f2&amp;experiment_id=374362034103955121&amp;trace_id=ba8cd3b0cde04e7ebb4963ed23ac4325&amp;experiment_id=374362034103955121&amp;trace_id=b509d618fb99479b8f900ba31c60cae7&amp;experiment_id=374362034103955121&amp;trace_id=69be3eb7cc494be3b32b711ab245dde9&amp;experiment_id=374362034103955121&amp;trace_id=e7e4590bbe71478495c577e623dd59b4&amp;experiment_id=374362034103955121&amp;trace_id=324487467e4c44a1ad97149f8d96832d&amp;experiment_id=374362034103955121&amp;version=2.20.3\"\n",
+       "  />\n",
+       "</div>\n"
+      ],
+      "text/plain": [
+       "[Trace(request_id=1c2f06aff78a453bb2f5661c88cdd589), Trace(request_id=6cbda2edc44844689931cdaeafe31287), Trace(request_id=dd5e5fa84d9a46978fbfd9f1a4c23dc8), Trace(request_id=1cced7301baa422889e03947efd92b75), Trace(request_id=1327677978cf4b00979d269541e370f2), Trace(request_id=ba8cd3b0cde04e7ebb4963ed23ac4325), Trace(request_id=b509d618fb99479b8f900ba31c60cae7), Trace(request_id=69be3eb7cc494be3b32b711ab245dde9), Trace(request_id=e7e4590bbe71478495c577e623dd59b4), Trace(request_id=324487467e4c44a1ad97149f8d96832d)]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
