--- a/classification.ipynb
+++ b/classification.ipynb
@@ -2951,6 +2951,31 @@
     "print(\"old: \", (len(events) - 17)/len(events))\n",
     "print(\"new: \", (len(events) - len(disagreements))/len(events))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dspy.teleprompt import *\n",
+    "\n",
+    "# Load our model\n",
+    "lm = dspy.LM('ollama_chat/llama3.2:1b', api_base='http://localhost:11434')\n",
+    "prompt_gen_lm = dspy.LM('fireworks_ai/accounts/fireworks/models/llama-v3p3-70b-instruct')\n",
+    "dspy.configure(lm=lm)\n",
+    "\n",
+    "# Optimize\n",
+    "tp = dspy.MIPROv2(metric=validate_category, auto=\"light\", prompt_model=prompt_gen_lm, task_model=lm)\n",
+    "optimized_classify = tp.compile(classify, trainset=trainset, max_labeled_demos=0, max_bootstrapped_demos=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
