--- a/classification.ipynb
+++ b/classification.ipynb
@@ -2956,7 +2956,135 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/03/13 17:16:12 INFO dspy.teleprompt.mipro_optimizer_v2: \n",
+      "RUNNING WITH THE FOLLOWING LIGHT AUTO RUN SETTINGS:\n",
+      "num_trials: 7\n",
+      "minibatch: True\n",
+      "num_candidates: 7\n",
+      "valset size: 100\n",
+      "\n",
+      "2025/03/13 17:16:13 INFO dspy.teleprompt.mipro_optimizer_v2: \n",
+      "==> STEP 1: BOOTSTRAP FEWSHOT EXAMPLES <==\n",
+      "2025/03/13 17:16:13 INFO dspy.teleprompt.mipro_optimizer_v2: These will be used for informing instruction proposal.\n",
+      "\n",
+      "2025/03/13 17:16:13 INFO dspy.teleprompt.mipro_optimizer_v2: Bootstrapping N=7 sets of demonstrations...\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bootstrapping set 1/7\n",
+      "Bootstrapping set 2/7\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 17%|█▋        | 13/78 [00:00<00:00, 556.69it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bootstrapped 3 full traces after 13 examples for up to 1 rounds, amounting to 13 attempts.\n",
+      "Bootstrapping set 3/7\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 15%|█▌        | 12/78 [00:00<00:00, 755.42it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bootstrapped 3 full traces after 12 examples for up to 1 rounds, amounting to 12 attempts.\n",
+      "Bootstrapping set 4/7\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 10%|█         | 8/78 [00:00<00:00, 1036.56it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bootstrapped 3 full traces after 8 examples for up to 1 rounds, amounting to 8 attempts.\n",
+      "Bootstrapping set 5/7\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  5%|▌         | 4/78 [00:00<00:00, 682.50it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bootstrapped 3 full traces after 4 examples for up to 1 rounds, amounting to 4 attempts.\n",
+      "Bootstrapping set 6/7\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  1%|▏         | 1/78 [00:00<00:00, 416.68it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bootstrapped 1 full traces after 1 examples for up to 1 rounds, amounting to 1 attempts.\n",
+      "Bootstrapping set 7/7\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  6%|▋         | 5/78 [00:00<00:00, 845.63it/s]\n",
+      "2025/03/13 17:16:13 INFO dspy.teleprompt.mipro_optimizer_v2: \n",
+      "==> STEP 2: PROPOSE INSTRUCTION CANDIDATES <==\n",
+      "2025/03/13 17:16:13 INFO dspy.teleprompt.mipro_optimizer_v2: We will use the few-shot examples from the previous step, a generated dataset summary, a summary of the program code, and a randomly selected prompting tip to propose instructions.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bootstrapped 3 full traces after 5 examples for up to 1 rounds, amounting to 5 attempts.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/03/13 17:16:49 INFO dspy.teleprompt.mipro_optimizer_v2: \n",
+      "Proposing instructions...\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "from dspy.teleprompt import *\n",
     "\n",
